# RedditPodcast

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reddit_analysis_2025-10-19_16-09-54.md  reddit_data_2025-10-19_16-09-15.txt  reddit_search_old.py  reddit_search_podcast.py
News_agent/: .env.example  Dockerfile  README.md  ai_analyzer.py  app.py  config.py  docker-compose.yml  pyproject.toml  reddit_fetcher.py  scheduler.py  telegram_sender.py  utils.py  workflow.py
News_agent/data/: schedule_config.json
News_agent/outputs/: reddit_analysis_2025-10-28_18-42-59.txt  reddit_analysis_2025-10-28_18-45-56.txt  reddit_analysis_2025-10-29_09-22-51.txt  reddit_raw_data_2025-10-28_18-42-59.txt  reddit_raw_data_2025-10-28_18-45-56.txt  reddit_raw_data_2025-10-29_09-22-51.txt
News_agent_v1_v2/: .gitignore  README.md  pyproject.toml  reddit_search_podcast_v2.py
News_agent_v3/: .env.example  ai_analyzer.py  app.py  config.py  email_fetcher.py  pyproject.toml  scheduler.py  telegram_sender.py  test_email.py  test_google_free.py  tts_service.py  utils.py  workflow.py
News_agent_v3/docker/: Dockerfile  docker-compose.yml
News_agent_v3/docs/: README.md
News_agent_v3/outputs/: test_email_parsed.txt  test_email_parsed_links.txt
News_agent_v3/outputs/run_2025-11-09_12-22-54/: analysis.txt  llm_input.txt  raw_data.txt
News_agent_v3/scheduler/: schedule_config.json
